NCL-9119: Fix license information for license text files (#1427)